# MarkDown_converter

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  doc2md.spec  pyproject.toml  run.vbs
.github/workflows/: ci.yml  release.yml
.pdf_to_md_internal/: 1 - run_aux.bat  2 - script_pdf_to_markdown.py  requirements.txt
scripts/: build_exe.bat  doc2md_launcher.py  run_aux.bat
src/doc2md/: __init__.py  __main__.py  cli.py  dependencies.py  markdown_utils.py  models.py  settings.py
src/doc2md/converters/: __init__.py  assets.py  base.py  comments.py  docx.py  factory.py  ocr.py  pdf.py  pptx.py
src/doc2md/i18n/: __init__.py  en.py  pt.py
src/doc2md/ui/: __init__.py  app.py  dnd.py
tests/: __init__.py  conftest.py  test_assets_ocr.py  test_build_output_path.py  test_comments.py  test_compose_markdown.py  test_converters.py  test_dependencies.py  test_dnd.py  test_i18n.py  test_markdown_utils.py  test_settings.py
