[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2md"
description = "Convert PDF, Word DOCX, and PowerPoint PPTX documents into clean Markdown."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rui Casaca", email = "rui.casaca@gmail.com" }]
keywords = ["markdown", "pdf", "docx", "pptx", "conversion", "rag", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dynamic = ["version"]
dependencies = [
    "pypdf>=4.0,<7",
    "python-docx>=1.1,<2",
    "python-pptx>=0.6.23,<2",
    "pdfminer.six>=20231228",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10,<13",
]
dnd = [
    "tkinterdnd2>=0.4.2",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
build = [
    "pyinstaller>=6",
]

[project.scripts]
doc2md = "doc2md.cli:main"

[project.urls]
Homepage = "https://github.com/Rui-Casaca/MarkDown_converter"
Repository = "https://github.com/Rui-Casaca/MarkDown_converter"
Issues = "https://github.com/Rui-Casaca/MarkDown_converter/issues"

[tool.hatch.version]
path = "src/doc2md/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/doc2md"]

[tool.hatch.build.targets.sdist]
include = [
    "src/doc2md",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
